2008-04-1  Brandon Hale <brandon@brandonhale.us>

	data/glade/*.glade:
	Cleanup from Jordan on bug #525468.
	Update glade files using glade-3. Obsolete properties are removed and
	indentation is consistant.

2008-03-31  Brandon Hale <brandon@brandonhale.us>
	Two patches from Jordan.
	Refactor Config.cs, bug #108296.
	Build gnome-keyring-sharp with WITH_DBUS, bug #517070.

2008-03-30  Brandon Hale <brandon@brandonhale.us>

	Some portability fixes.
	Apply a patch to not use memmem() on non-GNU systems.
	Silently catch failed calls to prctl when changing the process name on
	non-Linux. See Gnome bug #475031.

2008-03-29  Brandon Hale <brandon@brandonhale.us>

	Move account data from gconf to gnome-keyring.
	This encrypts your last.fm password.
	Patch by Łukasz Jernaś on Gnome Bug #517070.

2008-03-29  Brandon Hale <brandon@brandonhale.us>
	
	Incorporate a long desired feature to display running track time vs
	estimated track duration. This uses a label instead of an hscale, to
	keep grumpy Last Exit maintainers at bay. Slightly modified from a
	patch by Jordan Callicoat on Gnome Bug #490989.

2008-03-29  Brandon Hale <brandon@brandonhale.us>
	
	Properly dispose of gstreamer element when shutting down.
	Gnome Bug #524124, fix from Jordan Callicoat.

2008-03-26  Sebastian Dröge  <slomo@circular-chaos.org>

	* configure.ac:
	* notify-sharp/Makefile.am:
	* src/Makefile.am: Use an external notify-sharp if available. This
	is most important as the DBus interface of notification-daemon changes
	soonish and a notify-sharp is required for this.

2008-03-19  Sebastian Dröge  <slomo@circular-chaos.org>

	* src/last-exit.exe.config.in: Add a few missing dllmaps.

2008-03-19  Sebastian Dröge  <slomo@circular-chaos.org>

	* src/PlayerWindow.cs: Use Bacon.VolumeButton instead of just
	VolumeButton. Gtk# 2.12 has it's own VolumeButton now creating an
	ambiguous reference between the two and failing the build.

2008-02-24  Brandon Hale <brandon@brandonhale.us>

	* AUTHORS, COPYING: